--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "python.linting.enabled": false
+    "python.linting.enabled": false,
+    "files.associations": {
+        "stddef.h": "c",
+        "python.h": "c"
+    }
 }
